--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prabhat' Countdown Timer</title>
+  <title>Prabhat's Countdown Timer</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="box">
-      <h3>TechnoHack's Countdown Timer</h3>
+      <h3>TECHNOHACK'S COUNTDOWN TIMER</h3>
       <div class="frame">
         <div class="hrs">00</div>
         <div class="colon">:</div>
