--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="box">
-      <h3>TECHNOHACK'S COUNTDOWN TIMER</h3>
+      <h3>PRABHAT'S COUNTDOWN TIMER</h3>
       <div class="frame">
         <div class="hrs">00</div>
         <div class="colon">:</div>
